# pyremap

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  dev-spec.txt  dev_environment.yaml  pyproject.toml  setup.cfg  setup.py
.github/: copilot-instructions.md  dependabot.yml
0.0.10/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  versions.html
0.0.11/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  versions.html
0.0.12/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  versions.html
0.0.13/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  searchindex.js  versions.html
0.0.14/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  versions.html
0.0.15/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  versions.html
0.0.16/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  searchindex.js  versions.html
0.0.2/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
0.0.3/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html
0.0.4/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html
0.0.5/: .buildinfo  api.html  genindex.html  index.html  search.html
0.0.6/: .buildinfo  api.html  index.html  search.html  searchindex.js
0.0.7/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html
0.0.8/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  versions.html
0.0.9/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  versions.html
1.0.0/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  versions.html
1.0.1/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  versions.html
1.1.0/: .buildinfo  api.html  genindex.html  index.html  quick_start.html  search.html  searchindex.js  versions.html
1.2.0/: .buildinfo  api.html  genindex.html  index.html  quick_start.html  search.html  searchindex.js  versions.html
1.3.0/: .buildinfo  api.html  genindex.html  index.html  quick_start.html  search.html  searchindex.js  versions.html
1.4.0/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  searchindex.js  versions.html
1.4.1/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  searchindex.js
2.0.0/: .buildinfo  genindex.html  index.html  objects.inv  quick_start.html  search.html  searchindex.js
2.1.0/: .buildinfo  genindex.html  index.html  objects.inv  quick_start.html  search.html  searchindex.js
2.2.0/: .buildinfo  genindex.html  index.html  objects.inv  quick_start.html  search.html  searchindex.js
2.3.0/: .buildinfo  genindex.html  index.html  objects.inv  quick_start.html  search.html
ci/: python3.10.yaml  python3.11.yaml  python3.12.yaml  python3.13.yaml  python3.14.yaml  python3.6.yaml  python3.7.yaml  python3.8.yaml  python3.9.yaml
docs/: .gitignore  Makefile  api.md  api.rst  conf.py  environment.yml  generate_versions_json.py  index.md  index.rst  quick_start.md  versions.rst
examples/: make_lat_lon_to_mpas_mapping.py  make_mpas_to_Antarctic_stereo_mapping.py  make_mpas_to_antarctic_stereo_mapping.py  make_mpas_to_lat_lon_mapping.py  make_mpas_vertex_to_Antarctic_stereo_mapping.py  make_mpas_vertex_to_antarctic_stereo_mapping.py  remap_stereographic.py
licenses/: LICENSE_MPAS-Analysis
main/: .buildinfo  api.html  genindex.html  index.html  objects.inv  quick_start.html  search.html  searchindex.js  versions.html
pyremap/: __init__.py  descriptor.py  io.py  lat_lot_2d_grid_descriptor.py  lat_lot_grid_descriptor.py  (+10 more)
(+681 files in other folders)
