[project]
name = "pyremap"
dynamic = ["version"]
authors = [
    { name="Xylar Asay-Davis", email="xylar@lanl.gov" },
    { name="Althea Denlinger" },
]
description = "Python remapping tools for climate and earth system models"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    # these are only for searching/browsing projects on PyPI
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "dask",
    "netcdf4",
    "numpy",
    "pyproj",
    "scipy",
    "xarray>=0.10.0",
]

[tool.isort]
multi_line_output = "3"
include_trailing_comma = true
force_grid_wrap = "0"
use_parentheses = true
line_length = "79"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["ci*", "docs*", "licenses*", "examples*"]

[tool.setuptools.dynamic]
version = { attr = "pyremap.version.__version__" }

[project.urls]
Documentation = "https://mpas-dev.github.io/pyremap/stable/"
"Bug Tracker" = "https://github.com/MPAS-Dev/pyremap/issues"
