[project]
name = "pyremap"
dynamic = ["version"]
authors = [
    { name="Xylar Asay-Davis", email="xylar@lanl.gov" },
    { name="Althea Denlinger" },
]
description = "Python remapping tools for climate and earth system models"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    # these are only for searching/browsing projects on PyPI
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "dask",
    "netcdf4",
    "numpy",
    "pyproj",
    "scipy",
    "xarray>=0.10.0",
]

[project.optional-dependencies]
docs = [
    # building documentation
    "sphinx >=7.0.0",
    "sphinx_rtd_theme",
    "myst-parser",
    "sphinx-multiversion",
]

dev = [
    # linting and testing
    "pip",
    "flynt",
    "mypy",
    "pre-commit",
    "ruff",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = ["docs*", "conda*"]
line-length = 79

[tool.ruff.lint]
# E501 - max line-length
# E4 - whitespace
# E7 - multiple-statements
# E9 - trailing-whitespace
# F - Enable Pyflakes
# B - Enable flake8-bugbear
# W - Enable pycodestyle
# I - imports
# C901 - complex-structure
# D - Enable flake8-docstrings
select = ["E501", "E4", "E7", "E9", "F", "B", "W", "I", "C901"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 18.
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["ci", "docs", "examples", "licenses", "tests"]

[tool.setuptools.dynamic]
version = { attr = "pyremap.version.__version__" }

[project.urls]
Documentation = "https://mpas-dev.github.io/pyremap/stable/"
"Bug Tracker" = "https://github.com/MPAS-Dev/pyremap/issues"
